rgbds-0.6.1/test/link/linkerscript-escapes-test.out
error: ./linkerscript-escapes-test.link(4): Illegal character escape
