rgbds-0.6.1/test/link/linkerscript-escapes-test.link
; This uses CR line endingsROM0	"A\"B\tC\rD\nE"	"in\{valid"